MTX-17
* Removed old code
* Created Connector model
* Created ConnectorDeserializer